# SO-Pr2-Synchronization

./: .gitignore  CMakeLists.txt  README.md  binnacle.c  client.c  hello  hello.c  inicializador.c  initializer.c  killer.c  main.c  mapwritejson.c  producer.c  psem.c  psem2.c  schema.json  spy.c  template.h  thread-example.c
examples/: algorithms.c  clock-example.c  inicializador.c  logger-example.c  producer_test.c  random.c  schema-example.json  server.c  test_killer.c  thread_test.c
examples/mmap/: mapreadjson.c  mapwritejson.c
include/: CMakeLists.txt  algorithms.c  algorithms.h  random.c  random.h
lib/: CMakeLists.txt
